Better KnowledgeParsing and better model
Add KnowledgeNode.java as component for one element with all relations and related elements

Signed-off-by: Oliver Geisel <geisel.oliver@googlemail.com>